k8s/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress 
  namespace: cloudtask
spec:
  rules:
  - host: cloudtask.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api/tasks
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 5000
